Fixes for tooltip overflow, theming and icon url resolution.

--- a/src/apps/main/scss/v2/pages/posts/_app.scss
+++ b/src/apps/main/scss/v2/pages/posts/_app.scss
@@ -19,6 +19,10 @@ article[data-type="app"] {
         background-size: contain;
     }
 
+    > .text {
+        overflow: visible;
+    }
+
     .description {
         @extend %readable-text;
     }
